--- a/package.json
+++ b/package.json
@@ -161,5 +161,15 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "archiver": "7.0.0",
+    "dayjs": "^1.8.34",
+    "fast-csv": "^4.3.1",
+    "jszip": "^3.5.0",
+    "readable-stream": "^3.6.0",
+    "saxes": "^5.0.1",
+    "tmp": "^0.2.0",
+    "unzipper": "^0.10.11",
+    "uuid": "^8.3.0"
+  },
 }
