--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Run SOOS - Scan for vulnerabilities
-      uses: mailto:soos-io/soos-sca-github-action@pre-release-testing # Get Latest Version from https://github.com/marketplace/actions/soos-core-sca
+      uses: soos-io/soos-sca-github-action@pre-release-testing # Get Latest Version from https://github.com/marketplace/actions/soos-core-sca
       with:
         project_name: "Github SCA Test"
         client_id: ${{ secrets.SOOS_CLIENT_ID }}
