--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
         client_id: ${{ secrets.SOOS_CLIENT_ID }}
         api_key: ${{ secrets.SOOS_API_KEY }}
         project_name: "SCA GH Actions"
-        api_url: "https://qa-api.soos.io/api/"
+        #api_url: "https://qa-api.soos.io/api/"
